force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Comment__c/fields/agf__Body__c.field-meta.xml
<CustomField>
    <fullName>agf__Body__c</fullName>
    <label>Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>