force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Comment__c/fields/agf__Comment_Created_By__c.field-meta.xml
<CustomField>
    <fullName>agf__Comment_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comment Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>