force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Comment__c/fields/agf__Comment_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Comment_Created_Date__c</fullName>
    <label>Comment Created Date</label>
    <type>DateTime</type>
</CustomField>