force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Comment__c/fields/agf__Created_By__c.field-meta.xml
<CustomField>
    <fullName>agf__Created_By__c</fullName>
    <label>Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>