force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Comment__c/fields/agf__LocaleCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>agf__LocaleCreatedDate__c</fullName>
    <label>LocaleCreatedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>