force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Comment__c/fields/agf__Posted_to_Chatter__c.field-meta.xml
<CustomField>
    <fullName>agf__Posted_to_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field tracks if the comment has been posted to chatter. This field is used to tell if we need to display legacy comments, for more info see dependent story: W-1756310</description>
    <label>Posted to Chatter</label>
    <type>Checkbox</type>
</CustomField>