force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Comment__c/fields/agf__Preserve_Formatting__c.field-meta.xml
<CustomField>
    <fullName>agf__Preserve_Formatting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to decide if we are going to surround our comment body with a &quot;PRE&quot; tag</description>
    <label>Preserve Formatting</label>
    <type>Checkbox</type>
</CustomField>