force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Comment__c/fields/agf__Priority_Override_Explanation__c.field-meta.xml
<CustomField>
    <fullName>agf__Priority_Override_Explanation__c</fullName>
    <description>Used to store what the reason for a priority override was</description>
    <label>Priority Override Explanation</label>
    <type>TextArea</type>
</CustomField>