force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Comment__c/fields/agf__Subject__c.field-meta.xml
<CustomField>
    <fullName>agf__Subject__c</fullName>
    <formula>agf__Work__r.agf__Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject</label>
    <type>Text</type>
</CustomField>