force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Comment__c/validationRules/agf__Body_is_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Body_is_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( agf__Body__c )</errorConditionFormula>
    <errorMessage>The comment body cannot be blank!</errorMessage>
</ValidationRule>